Optimizing blog system and first 3 posts

--- a/content/blog/en/financial-therapy-techniques-that-work.mdx
+++ b/content/blog/en/financial-therapy-techniques-that-work.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Financial Therapy Techniques That Actually Work: A Gentle Guide"
-date: "2024-12-19"
+date: "2025-06-10"
 summary: "Explore evidence-based financial therapy techniques using Internal Family Systems to heal your relationship with money."
 author: "SpendSentinel Team"
-readingTime: 3
+readingTime: 5
 tags: ["financial-therapy", "money-therapy", "behavioral-finance", "ifs-therapy", "financial-healing"]
 ---
 
@@ -27,15 +27,9 @@ It recognizes that our financial behaviors are deeply connected to:
 - Life experiences and trauma
 - Cultural and societal messages
 
-<div className="bg-blue-50 border-l-4 border-blue-400 p-6 my-8">
-  <div className="flex items-start">
-    <span className="text-3xl mr-4">🌱</span>
-    <div>
-      <h3 className="text-lg font-semibold text-blue-800 mb-2">Core Philosophy</h3>
-      <p className="text-blue-700">Financial therapy believes that healing your relationship with money happens through understanding, not judgment. Every financial pattern you have developed for good reasons—even the ones that no longer serve you.</p>
-    </div>
-  </div>
-</div>
+<KeyInsightBox>
+Financial therapy believes that healing your relationship with money happens through understanding, not judgment. Every financial pattern you have developed for good reasons—even the ones that no longer serve you.
+</KeyInsightBox>
 
 ## Understanding Your Financial Parts: An IFS Approach
 
@@ -80,13 +74,9 @@ This technique involves having gentle conversations with the different parts of 
 
 **Step 4:** Listen without trying to fix or change anything immediately.
 
-<div className="bg-green-50 border-l-4 border-green-400 p-6 my-8">
-  <div className="flex items-center mb-4">
-    <span className="text-2xl mr-3">🔍</span>
-    <h3 className="text-xl font-semibold text-green-800">Try This in SpendSentinel</h3>
-  </div>
-  <p className="text-green-700">Our <strong>Self-Assessment tool</strong> helps you identify your primary financial parts using IFS principles. Understanding these parts is the first step in financial healing.</p>
-</div>
+<TryThisBox title="Try This in SpendSentinel">
+Our **Self-Assessment tool** helps you identify your primary financial parts using IFS principles. Understanding these parts is the first step in financial healing.
+</TryThisBox>
 
 ### 2. Somatic Financial Awareness
 
@@ -142,15 +132,9 @@ What small changes would better honor your values?
 **Step 4: Compassionate accountability**
 How can you stay connected to your values without self-judgment?
 
-<div className="bg-amber-50 border-l-4 border-amber-400 p-4 my-6">
-  <div className="flex">
-    <div className="ml-3">
-      <p className="text-sm text-amber-700">
-        <strong>💡 Gentle Reminder:</strong> Financial healing isn't about becoming a "perfect" money manager. It's about developing a more compassionate, conscious relationship with money that honors both your practical needs and emotional well-being.
-      </p>
-    </div>
-  </div>
-</div>
+<ImportantNoteBox>
+**💡 Gentle Reminder:** Financial healing isn't about becoming a "perfect" money manager. It's about developing a more compassionate, conscious relationship with money that honors both your practical needs and emotional well-being.
+</ImportantNoteBox>
 
 ## Practical Application: The Daily Financial Check-In
 
@@ -172,13 +156,9 @@ Reflect on:
 • What did you learn about your financial parts?
 • How can you appreciate yourself for any progress made?
 
-<div className="bg-green-50 border-l-4 border-green-400 p-6 my-8">
-  <div className="flex items-center mb-4">
-    <span className="text-2xl mr-3">📱</span>
-    <h3 className="text-xl font-semibold text-green-800">Built-in Support</h3>
-  </div>
-  <p className="text-green-700">SpendSentinel's <strong>Daily Check-in feature</strong> provides gentle prompts for this practice, helping you build awareness of the connection between your emotions and financial behaviors.</p>
-</div>
+<BuiltInSupportBox>
+SpendSentinel's **Daily Check-in feature** provides gentle prompts for this practice, helping you build awareness of the connection between your emotions and financial behaviors.
+</BuiltInSupportBox>
 
 ## Working with Financial Trauma
 
@@ -201,13 +181,7 @@ Financial trauma—whether from sudden job loss, family money stress, or economi
 - Honor the wisdom of your survival strategies
 - Recognize that financial "health" looks different for everyone
 
-<div className="my-8 text-center">
-  <div className="bg-gray-100 border-2 border-dashed border-gray-300 rounded-lg p-8">
-    <p className="text-gray-500 italic">
-      [Image Placeholder: A diverse group of people sitting in a circle, sharing stories with warm, understanding expressions, representing the supportive community aspect of financial wellness and therapy]
-    </p>
-  </div>
-</div>
+<Image src="blog/a-diverse-group-of-people-sitting-in-a-circle.jpg" alt="A diverse group of people sitting in a circle, sharing stories with warm, understanding expressions, representing the supportive community aspect of financial wellness and therapy" />
 
 ## Integrating Financial Therapy into Daily Life
 
@@ -217,10 +191,10 @@ Rather than overhauling your entire relationship with money overnight, financial
 
 **A gentle timeline:**
 
-**Week 1-2:** Practice noticing without changing anything
-**Week 3-4:** Begin gentle dialogue with your financial parts
-**Month 2:** Experiment with values-based decision making
-**Month 3+:** Integrate body awareness and family pattern exploration
+- **Week 1-2:** Practice noticing without changing anything
+- **Week 3-4:** Begin gentle dialogue with your financial parts
+- **Month 2:** Experiment with values-based decision making
+- **Month 3+:** Integrate body awareness and family pattern exploration
 
 ### When to Seek Professional Support
 
@@ -258,22 +232,7 @@ Remember that financial healing, like all healing, happens in relationship—whe
 
 ## 🌟 Continue Your Financial Wellness Journey
 
-<div className="bg-gradient-to-r from-purple-50 to-pink-50 p-6 rounded-lg border border-purple-200 my-8">
-  <div className="text-center space-y-4">
-    <h3 className="text-xl font-semibold text-purple-800">Ready to put this into practice?</h3>
-    <p className="text-purple-700">
-      Start your personalized financial wellness journey with SpendSentinel's compassionate tools.
-    </p>
-    <div className="flex flex-col sm:flex-row gap-4 justify-center">
-      <a href="/self-assessment" className="bg-purple-600 text-white px-6 py-3 rounded-lg hover:bg-purple-700 transition-colors">
-        Discover Your Financial Parts
-      </a>
-      <a href="/parts-journal" className="bg-white text-purple-600 border border-purple-600 px-6 py-3 rounded-lg hover:bg-purple-50 transition-colors">
-        Start Parts Journaling
-      </a>
-    </div>
-  </div>
-</div>
+<CTABox />
 
 ### 📢 Share This Article
 
@@ -284,25 +243,11 @@ Remember that financial healing, like all healing, happens in relationship—whe
 
 ### 📬 Stay Updated
 
-<div className="bg-teal-50 border border-teal-200 p-6 rounded-lg my-8 text-center">
-  <h3 className="text-lg font-semibold text-teal-800 mb-3">Get New Articles in Your Inbox</h3>
-  <p className="text-teal-700 mb-4">
-    Join our community of mindful money managers. We'll send you gentle insights and practical tips for financial wellness.
-  </p>
-  <div className="flex flex-col sm:flex-row gap-2 max-w-md mx-auto">
-    <input 
-      type="email" 
-      placeholder="Your email address" 
-      className="flex-1 px-4 py-2 border border-teal-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-500"
-    />
-    <button className="bg-teal-600 text-white px-6 py-2 rounded-lg hover:bg-teal-700 transition-colors">
-      Subscribe
-    </button>
-  </div>
-  <p className="text-xs text-teal-600 mt-2">
-    No spam, ever. Unsubscribe anytime with one click.
-  </p>
-</div>
+<NewsletterBox>
+### Get New Articles in Your Inbox
+
+Join our community of mindful money managers. We'll send you gentle insights and practical tips for financial wellness.
+</NewsletterBox>
 
 ---
 
