--- a/content/blog/en/money-mindset-self-assessment-guide.mdx
+++ b/content/blog/en/money-mindset-self-assessment-guide.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Money Mindset Self-Assessment: Understanding Your Financial Parts"
-date: "2024-12-19"
+date: "2025-05-27"
 summary: "Discover your unique money mindset patterns through compassionate self-assessment and learn to work with your financial parts."
 author: "SpendSentinel Team"
-readingTime: 3
+readingTime: 5
 tags: ["money-mindset", "self-assessment", "financial-parts", "money-psychology", "financial-wellness"]
 ---
 
@@ -25,15 +25,9 @@ But your money mindset is as unique as your fingerprint, shaped by:
 - Cultural background
 - Different parts of your personality that show up around financial decisions
 
-<div className="bg-blue-50 border-l-4 border-blue-400 p-6 my-8">
-  <div className="flex items-start">
-    <span className="text-3xl mr-4">💡</span>
-    <div>
-      <h3 className="text-lg font-semibold text-blue-800 mb-2">Key Understanding</h3>
-      <p className="text-blue-700">Your money mindset isn't fixed or permanent. It's a collection of learned patterns and protective strategies that can evolve as you understand them with compassion and awareness.</p>
-    </div>
-  </div>
-</div>
+<KeyInsightBox>
+Your money mindset isn't fixed or permanent. It's a collection of learned patterns and protective strategies that can evolve as you understand them with compassion and awareness.
+</KeyInsightBox>
 
 ## The Internal Family Systems Approach to Money
 
@@ -89,13 +83,9 @@ Consider your background:
 • What cultural beliefs about money do you carry?
 • Are you repeating or rebelling against family money patterns?
 
-<div className="bg-green-50 border-l-4 border-green-400 p-6 my-8">
-  <div className="flex items-center mb-4">
-    <span className="text-2xl mr-3">🔍</span>
-    <h3 className="text-xl font-semibold text-green-800">Discover Your Financial Parts</h3>
-  </div>
-  <p className="text-green-700">SpendSentinel's <strong>Self-Assessment tool</strong> uses evidence-based IFS principles to help you identify your primary financial parts. Understanding these parts is the first step toward financial wellness.</p>
-</div>
+<TryThisBox title="Discover Your Financial Parts">
+SpendSentinel's **Self-Assessment tool** uses evidence-based IFS principles to help you identify your primary financial parts. Understanding these parts is the first step toward financial wellness.
+</TryThisBox>
 
 ## Working with Your Assessment Results
 
@@ -135,37 +125,27 @@ Once you understand your parts, you can begin facilitating conversations between
 • What would help your parts trust each other more?
 • How can you honor the positive intentions of all your parts?
 
-<div className="bg-amber-50 border-l-4 border-amber-400 p-4 my-6">
-  <div className="flex">
-    <div className="ml-3">
-      <p className="text-sm text-amber-700">
-        <strong>💡 Gentle Reminder:</strong> The goal isn't to eliminate certain parts or become perfectly balanced. It's to understand your parts' needs and help them work together in service of your overall well-being.
-      </p>
-    </div>
-  </div>
-</div>
+<ImportantNoteBox>
+**💡 Gentle Reminder:** The goal isn't to eliminate certain parts or become perfectly balanced. It's to understand your parts' needs and help them work together in service of your overall well-being.
+</ImportantNoteBox>
 
 ## Practical Application: Daily Parts Check-In
 
 ### A Simple 3-Minute Practice
 
 **Morning intention setting:**
-• Which financial parts feel active today?
-• What do these parts need from you?
-• How can you honor both practical needs and emotional well-being today?
+- Which financial parts feel active today?
+- What do these parts need from you?
+- How can you honor both practical needs and emotional well-being today?
 
 **Evening reflection:**
-• Which parts showed up in your financial decisions today?
-• What did you learn about your parts' needs or fears?
-• How can you appreciate the positive intentions behind today's financial choices?
+- Which parts showed up in your financial decisions today?
+- What did you learn about your parts' needs or fears?
+- How can you appreciate the positive intentions behind today's financial choices?
 
-<div className="bg-green-50 border-l-4 border-green-400 p-6 my-8">
-  <div className="flex items-center mb-4">
-    <span className="text-2xl mr-3">📱</span>
-    <h3 className="text-xl font-semibold text-green-800">Built-In Support</h3>
-  </div>
-  <p className="text-green-700">Our <strong>Daily Check-in feature</strong> includes gentle prompts to help you track which parts show up in your financial decisions, building awareness without judgment.</p>
-</div>
+<BuiltInSupportBox>
+Our **Daily Check-in feature** includes gentle prompts to help you track which parts show up in your financial decisions, building awareness without judgment.
+</BuiltInSupportBox>
 
 ## Creating a Personalized Financial Wellness Plan
 
@@ -195,13 +175,7 @@ Once you understand your parts, you can begin facilitating conversations between
 - Include self-compassion in your financial plans
 - Use your planning skills to schedule regular financial self-care
 
-<div className="my-8 text-center">
-  <div className="bg-gray-100 border-2 border-dashed border-gray-300 rounded-lg p-8">
-    <p className="text-gray-500 italic">
-      [Image Placeholder: Hands gently holding a small plant sprouting from coins, symbolizing the nurturing growth of healthy financial habits and self-understanding]
-    </p>
-  </div>
-</div>
+<Image src="blog/hands-gently-holding-a-small-plant.jpg" alt="Hands gently holding a small plant sprouting from coins, symbolizing the nurturing growth of healthy financial habits and self-understanding" />
 
 ## Beyond Individual Assessment: Systemic Awareness
 
@@ -259,22 +233,7 @@ Every part of you developed for good reasons:
 
 ## 🌟 Continue Your Financial Wellness Journey
 
-<div className="bg-gradient-to-r from-purple-50 to-pink-50 p-6 rounded-lg border border-purple-200 my-8">
-  <div className="text-center space-y-4">
-    <h3 className="text-xl font-semibold text-purple-800">Ready to put this into practice?</h3>
-    <p className="text-purple-700">
-      Start your personalized financial wellness journey with SpendSentinel's compassionate tools.
-    </p>
-    <div className="flex flex-col sm:flex-row gap-4 justify-center">
-      <a href="/self-assessment" className="bg-purple-600 text-white px-6 py-3 rounded-lg hover:bg-purple-700 transition-colors">
-        Take Your Assessment
-      </a>
-      <a href="/daily-checkin" className="bg-white text-purple-600 border border-purple-600 px-6 py-3 rounded-lg hover:bg-purple-50 transition-colors">
-        Start Daily Check-ins
-      </a>
-    </div>
-  </div>
-</div>
+<CTABox />
 
 ### 📢 Share This Article
 
@@ -285,25 +244,11 @@ Every part of you developed for good reasons:
 
 ### 📬 Stay Updated
 
-<div className="bg-teal-50 border border-teal-200 p-6 rounded-lg my-8 text-center">
-  <h3 className="text-lg font-semibold text-teal-800 mb-3">Get New Articles in Your Inbox</h3>
-  <p className="text-teal-700 mb-4">
-    Join our community of mindful money managers. We'll send you gentle insights and practical tips for financial wellness.
-  </p>
-  <div className="flex flex-col sm:flex-row gap-2 max-w-md mx-auto">
-    <input 
-      type="email" 
-      placeholder="Your email address" 
-      className="flex-1 px-4 py-2 border border-teal-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-500"
-    />
-    <button className="bg-teal-600 text-white px-6 py-2 rounded-lg hover:bg-teal-700 transition-colors">
-      Subscribe
-    </button>
-  </div>
-  <p className="text-xs text-teal-600 mt-2">
-    No spam, ever. Unsubscribe anytime with one click.
-  </p>
-</div>
+<NewsletterBox>
+### Get New Articles in Your Inbox
+
+Join our community of mindful money managers. We'll send you gentle insights and practical tips for financial wellness.
+</NewsletterBox>
 
 ---
 
